--- a/Clases/Clase14/src/Frontend/FrmLogin.form
+++ b/Clases/Clase14/src/Frontend/FrmLogin.form
@@ -91,11 +91,13 @@
     </Component>
     <Component class="javax.swing.JTextField" name="txtUsuario">
       <Properties>
+        <Property name="text" type="java.lang.String" value="Admin"/>
         <Property name="name" type="java.lang.String" value="txtUsuario" noResource="true"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JTextField" name="txtClave">
       <Properties>
+        <Property name="text" type="java.lang.String" value="123"/>
         <Property name="name" type="java.lang.String" value="txtClave" noResource="true"/>
       </Properties>
     </Component>
